MDEV-21344	Valgrind uninitialised value warnings in dict_acquire_mdl_shared

- For partition table, tbl_name_len is calculated wrongly. So it leads to
this uninitialised value warnings